--- a/random.html
+++ b/random.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!--  TIP
-	You will find any errors from the head section using
-	the console. -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="imgs/favicon">
@@ -26,7 +23,7 @@
 	<main>
 		<h2>Random Page</h2>
 
-		<p>Make sure you are doing the readings from the <a href = "//www.w3schools.com/html/">W3 Schools HTML tutorial</a> as well as the readings from Shay Howe's <a href = "https://learn.shayhowe.com/html-css/"<a>HTML and CSS tutorial</p>
+		<p>Make sure you are doing the readings from the <a href = "//www.w3schools.com/html/">W3 Schools HTML tutorial</a> as well as the <a href = "https://learn.shayhowe.com/html-css/">readings from Shay Howe's </a>HTML and CSS tutorial</p>
 
 		<p>Using the Piazza site is another great way to stay on top of your classwork</p>
 
